Separate InstanceRegistry