@@ -3,25 +3,32 @@ package no.hal.config;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Objects;
 import no.hal.config.ext.ExtConfiguration;
+import no.hal.config.ext.InstanceRegistryImpl;
 
 public class CompositeConfiguration implements ExtConfiguration {
 
   private final List<Configuration> configuration;
 
-  private CompositeConfiguration(Configuration configuration1, Collection<Configuration> configurationN) {
-    this.configuration = new ArrayList<>(configurationN);
-    this.configuration.add(0, configuration1);
+  private final InstanceRegistryImpl instanceRegistry;
+
+  private CompositeConfiguration(Configuration configuration1, InstanceRegistryImpl instanceRegistry, Collection<Configuration> configurationN) {
+    this.configuration = new ArrayList<>(configurationN.size() + 1);
+    this.configuration.add(configuration1);
+    this.configuration.addAll(configurationN);
     this.configuration.removeIf(Objects::isNull);
+    this.instanceRegistry = instanceRegistry;
   }
 
   public CompositeConfiguration(Configuration configuration1, Configuration... configurationN) {
-    this(configuration1, Arrays.asList(configurationN));
+    this(configuration1, new InstanceRegistryImpl(), List.of(configurationN));
+  }
+
+  public CompositeConfiguration(CompositeConfiguration configuration) {
+    this(configuration, new InstanceRegistryImpl(configuration.instanceRegistry), List.of());
   }
 
   public void addConfiguration(Configuration configuration) {
@@ -48,41 +55,22 @@ public class CompositeConfiguration implements ExtConfiguration {
     throw new NoSuchElementException("Setting " + path + " of class " + clazz.getSimpleName() + " not found");
   }
 
-  // ExtConfiguration
-
-  protected record InstanceKey(Class<?> clazz, Object qualifier) {
-  }
-
-  private final Map<InstanceKey, Object> instanceMap = new HashMap<>();
-
-  private <T> T getInstance(InstanceKey key) {
-    return (T) instanceMap.get(key);
-  }
+  // InstanceRegistry
 
   @Override
   public <T> T getInstance(Class<T> clazz, Object qualifier) {
-    return getInstance(new InstanceKey(clazz, qualifier));
+    return instanceRegistry.getInstance(clazz, qualifier);
   }
 
   @Override
   public <T> List<T> getAllInstances(Class<T> clazz) {
-    List<T> all = new ArrayList<>();
-    for (var entry : instanceMap.entrySet()) {
-      if (clazz.equals(entry.getKey().clazz())) {
-        all.add((T) entry.getValue());
-      }
-    }
-    return all;
+    return instanceRegistry.getAllInstances(clazz);
   }
 
   // mutation
 
-  private <T> void registerInstance(Object instance, InstanceKey key) {
-    instanceMap.put(key, instance);
-  }
-
   @Override
   public <T> void registerInstance(T instance, Class<T> clazz, Object qualifier) {
-    registerInstance(instance, new InstanceKey(clazz, qualifier));
+    instanceRegistry.registerInstance(instance, clazz, qualifier);
   }
 }
